# azure-cvm-tooling

az-cvm-vtpm/: Cargo.toml
az-cvm-vtpm/az-snp-vtpm/: Cargo.toml
az-cvm-vtpm/az-snp-vtpm/example/: Cargo.toml
az-cvm-vtpm/az-snp-vtpm/example/src/: main.rs
az-cvm-vtpm/az-snp-vtpm/src/: amd_kds.rs  certs.rs  imds.rs  lib.rs  main.rs  report.rs
az-cvm-vtpm/az-tdx-vtpm/: Cargo.toml
az-cvm-vtpm/src/: lib.rs  quote.rs
az-cvm-vtpm/src/hcl/: mod.rs
az-cvm-vtpm/src/vtpm/: mod.rs  verify.rs
