[package]
name = "az-tdx-vtpm"
version = "0.7.3"
edition = "2021"
repository = "https://github.com/kinvolk/azure-cvm-tooling/"
license = "MIT"
keywords = ["azure", "tpm", "tdx"]
categories = ["cryptography", "virtualization"]
description = "vTPM based TDX attestation for Azure Confidential VMs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "tdx-vtpm"
path = "src/main.rs"

[dependencies]
az-cvm-vtpm = { path = "..", version = "0.7.1" }
base64-url = "3.0.0"
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
zerocopy.workspace = true

[dev-dependencies]
openssl = { version = "0.10" }
hex.workspace = true

[features]
default = ["attester", "verifier"]
attester = []
verifier = ["az-cvm-vtpm/verifier"]
integration_test =[]
